@@ -23,7 +23,7 @@ nvim src/main/java/net/minecraft/server/MinecraftServer.java
 ./gradlew buildServer
 
 # 5. Run it
-java -Xmx4G -Xms2G --enable-preview -jar build/libs/hephaestus-26.1.2.jar nogui
+./gradlew runServer
 
 # 6. Patch it
 ./gradlew createPatch -Pclass=net/minecraft/server/MinecraftServer
@@ -61,3 +61,12 @@ server_jar_url=https://piston-data.mojang.com/...
 ```
 
 Delete `.hephaestus/` and re-run `./gradlew setup`.
+
+
+## Notes
+
+Vineflower doesn't always decompile the code into a perfect state so manual fixes may need to be
+implemented to newly patches classes.
+
+### Some issues include ...
+- Generic type inference mismatches (you can see an example in [DedicatedServerProperties](patches/net/minecraft/server/dedicated/DedicatedServerProperties.java.patch))
